--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,12 +13,12 @@ on:
 
 # ref https://docs.github.com/zh/actions/learn-github-actions/variables
 env:
-  repo_name_android: "siyuan-android"
-  repo_name: "siyuan"
-  repo_owner: "siyuan-note"
+  repo_name_android: "siyuan-pro-android"
+  repo_name: "siyuan-pro"
+  repo_owner: "shentx"
   package_json: "app/package.json"
-  docker_hub_owner: "b3log"
-  docker_hub_repo: "siyuan"
+  docker_hub_owner: "shentx"
+  docker_hub_repo: "siyuan-pro"
 
 jobs:
   build:
